// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Body Shop Theme it should match The Body Shop Dark theme snapshot: The Body Shop Dark Theme 1`] = `
Object {
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "iconSizes": Object {
    "huge": 144,
    "hugeX": 192,
    "hugeXX": 256,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largeX": 96,
    "largeXX": 128,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "opacity": Object {
    "00": 0,
    "04": 0.04,
    "08": 0.08,
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "80": 0.8,
    "disabled": 0.32,
    "disabledLow": 0.24,
    "high": 0.64,
    "low": 0.12,
    "lower": 0.04,
    "medium": 0.48,
    "mediumHigh": 0.56,
    "mediumLow": 0.16,
    "opaque": 1,
    "transparent": 0,
    "veryHigh": 0.8,
    "veryLow": 0.08,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227bbd",
      },
      "filledWarning": Object {
        "backgroundColor": "#fcc433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#fafafa",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "borderColor": "#227bbd",
        "color": "#fafafa",
      },
      "outlinedSuccess": Object {
        "color": "#fafafa",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "borderColor": "#fcc433",
        "color": "#fafafa",
      },
      "root": Object {
        "fontSize": 16,
        "fontWeight": 400,
        "letterSpacing": 0.51,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#fafafa",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#fafafa",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#fafafa",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#fafafa",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": 20,
        "fontWeight": 500,
        "letterSpacing": 0.24,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#fafafa",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#ffffff14",
          "color": "#ffffff3D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
          "color": "#ffffff3D",
        },
        "borderColor": "#ffffff3D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#fafafa",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
        "color": "#fafafa",
      },
      "root": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 40,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 48,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 32,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
          "color": "#ffffff3D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderRightColor": "#ffffff1F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderColor": "#4c938c",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderColor": "#bfbf75",
        },
      },
      "groupedOutlinedHorizontal": Object {
        "&:not(:first-child)": Object {
          "marginLeft": "none",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderRightColor": "#ffffff1F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
      },
    },
    "MuiChip": Object {
      "clickable": Object {
        "&:focus": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
      },
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#4c938c",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#4c938c",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "rgba(255, 255, 255, 0.6)",
        },
        "color": "rgba(255, 255, 255, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(255, 255, 255, 0.12)",
        "color": "#ffffff",
      },
      "outlinedPrimary": Object {
        "& $avatar": Object {
          "backgroundColor": "#7cc4bc",
        },
        "color": "#ffffff",
      },
      "outlinedSecondary": Object {
        "& $avatar": Object {
          "backgroundColor": "#f3f1a5",
        },
        "color": "#ffffff",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.24)",
          "color": "#ffffff",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(255, 255, 255, 0.12)",
        "color": "#ffffff",
        "fontSize": 14,
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#333333",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#7cc4bc",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormHelperText": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#bbbbbb",
        },
      },
    },
    "MuiFormLabel": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#fafafa",
        },
        "&.Mui-focused": Object {
          "color": "#bbbbbb",
          "fontSize": 14,
        },
        "fontSize": 14,
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#fafafa",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "adornedEnd": Object {
        "paddingRight": 48,
      },
      "input": Object {
        "&.Mui-disabled:not(::placeholder)": Object {
          "opacity": 0.24,
        },
        "&.MuiInput-inputTypeSearch": Object {
          "paddingRight": 64,
        },
        "&::placeholder": Object {
          "color": "#bbbbbb",
        },
        "border": 0,
        "boxSizing": "border-box",
        "lineHeight": "24px",
        "minHeight": 56,
        "padding": 16,
      },
      "inputMultiline": Object {
        "padding": 16,
      },
      "inputTypeSearch": Object {
        "&::-webkit-search-decoration, &::-webkit-search-cancel-button, &::-webkit-search-results-button, &::-webkit-search-results-decoration": Object {
          "display": "none",
        },
      },
      "root": Object {
        "&.Mui-focused": Object {
          "boxShadow": "#7cc4bc 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#bbbbbb 0 0 0 1px",
          },
          "boxShadow": "#fafafa 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiInputBase-multiline": Object {
          "padding": 0,
        },
        "&:hover": Object {
          "&.Mui-disabled": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#bbbbbb 0 0 0 1px",
        },
        "&[data-state='error']": Object {
          "boxShadow": "#e74627 0 0 0 1px",
        },
        "&[data-state='success']": Object {
          "boxShadow": "#569a32 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#777777 0 0 0 1px",
        "color": "#fafafa",
        "fontSize": 14,
        "width": "100%",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "background": "rgba(124, 196, 188, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(250, 250, 250, 0.16)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "icon": Object {
        "color": "#fafafa",
        "top": 4,
      },
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#777777",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiSvgIcon": Object {
      "root": Object {
        "fill": "#bbbbbb",
      },
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "active": "rgba(255, 255, 255, 0.56)",
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#121212",
      "defaultContrastText": "#ffffff",
      "paper": "#333333",
      "paperContrastText": "#ffffff",
    },
    "complementary": Object {
      "highlight": "#ffffff",
      "link": "#227bbd",
      "linkContrastText": "#ffffff",
      "warning": "#fcc433",
      "warningContrastText": "#000000",
    },
    "divider": "rgba(255, 255, 255, 0.12)",
    "error": Object {
      "contrastText": "#ffffff",
      "main": "#e74627",
    },
    "primary": Object {
      "contrastText": "#000000",
      "dark": "#4c938c",
      "light": "#aef7ee",
      "main": "#7cc4bc",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#bfbf75",
      "light": "#ffffd7",
      "main": "#f3f1a5",
    },
    "success": Object {
      "contrastText": "#ffffff",
      "main": "#569a32",
    },
    "text": Object {
      "disabled": "#777777",
      "hint": "#777777",
      "primary": "#fafafa",
      "secondary": "#bbbbbb",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "huge": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "hugeX": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "hugeXX": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "large": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeX": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeXX": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "medium": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "micro": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "none": "none",
    "small": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "tiny": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontSize": 16,
      "fontWeight": 400,
      "letterSpacing": 0.51,
    },
    "body2": Object {
      "fontSize": 14,
      "fontWeight": 400,
      "letterSpacing": 0.22,
    },
    "button": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 1.23,
      "lineHeight": 1.5,
    },
    "caption": Object {
      "fontSize": 12,
      "fontWeight": 400,
      "letterSpacing": 0.38,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": 96,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h2": Object {
      "fontSize": 60,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h3": Object {
      "fontSize": 48,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h4": Object {
      "fontSize": 34,
      "fontWeight": 400,
      "letterSpacing": 0.27,
    },
    "h5": Object {
      "fontSize": 24,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h6": Object {
      "fontSize": 20,
      "fontWeight": 500,
      "letterSpacing": 0.24,
    },
    "overline": Object {
      "fontSize": 12,
      "fontWeight": 500,
      "letterSpacing": 1.92,
    },
    "subtitle1": Object {
      "fontSize": 16,
      "fontWeight": 500,
      "letterSpacing": 0.13,
    },
    "subtitle2": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 0.11,
    },
  },
}
`;

exports[`The Body Shop Theme it should match The Body Shop Light theme snapshot: The Body Shop Light Theme 1`] = `
Object {
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "iconSizes": Object {
    "huge": 144,
    "hugeX": 192,
    "hugeXX": 256,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largeX": 96,
    "largeXX": 128,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "opacity": Object {
    "00": 0,
    "04": 0.04,
    "08": 0.08,
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "80": 0.8,
    "disabled": 0.32,
    "disabledLow": 0.24,
    "high": 0.64,
    "low": 0.12,
    "lower": 0.04,
    "medium": 0.48,
    "mediumHigh": 0.56,
    "mediumLow": 0.16,
    "opaque": 1,
    "transparent": 0,
    "veryHigh": 0.8,
    "veryLow": 0.08,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227bbd",
      },
      "filledWarning": Object {
        "backgroundColor": "#fcc433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#333333",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "borderColor": "#227bbd",
        "color": "#333333",
      },
      "outlinedSuccess": Object {
        "color": "#333333",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "borderColor": "#fcc433",
        "color": "#333333",
      },
      "root": Object {
        "fontSize": 16,
        "fontWeight": 400,
        "letterSpacing": 0.51,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#333333",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#333333",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#333333",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#333333",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": 20,
        "fontWeight": 500,
        "letterSpacing": 0.24,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#333333",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#00000014",
          "color": "#0000003D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "borderColor": "#0000003D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#333333",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
        "color": "#333333",
      },
      "root": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 40,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 48,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 32,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#001d10",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#a29d12",
        },
      },
      "groupedOutlinedHorizontal": Object {
        "&:not(:first-child)": Object {
          "marginLeft": "none",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
    },
    "MuiChip": Object {
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#004236",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#d6ce4b",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "#000000",
        },
        "color": "rgba(0, 0, 0, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#000000",
        },
        "color": "rgba(0, 0, 0, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(0, 0, 0, 0.12)",
        "color": "#000000",
      },
      "outlinedPrimary": Object {
        "color": "#000000",
      },
      "outlinedSecondary": Object {
        "color": "#000000",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.24)",
          "color": "#333333",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(0, 0, 0, 0.12)",
        "color": "#333333",
        "fontSize": 14,
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#ffffff",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#004236",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormLabel": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#e74627",
        },
        "&.Mui-focused": Object {
          "color": "#777777",
          "fontSize": 14,
        },
        "fontSize": 14,
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#333333",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "adornedEnd": Object {
        "paddingRight": 48,
      },
      "input": Object {
        "&.Mui-disabled:not(::placeholder)": Object {
          "opacity": 0.24,
        },
        "&.MuiInput-inputTypeSearch": Object {
          "paddingRight": 64,
        },
        "&::placeholder": Object {
          "color": "#777777",
        },
        "border": 0,
        "boxSizing": "border-box",
        "lineHeight": "24px",
        "minHeight": 56,
        "padding": 16,
      },
      "inputMultiline": Object {
        "padding": 16,
      },
      "inputTypeSearch": Object {
        "&::-webkit-search-decoration, &::-webkit-search-cancel-button, &::-webkit-search-results-button, &::-webkit-search-results-decoration": Object {
          "display": "none",
        },
      },
      "root": Object {
        "&.Mui-focused": Object {
          "boxShadow": "#004236 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#333333 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiInputBase-multiline": Object {
          "padding": 0,
        },
        "&:hover": Object {
          "&.Mui-disabled": Object {
            "boxShadow": "#bbbbbb 0 0 0 1px",
          },
          "boxShadow": "#777777 0 0 0 1px",
        },
        "&[data-state='error']": Object {
          "boxShadow": "#e74627 0 0 0 1px",
        },
        "&[data-state='success']": Object {
          "boxShadow": "#569a32 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#bbbbbb 0 0 0 1px",
        "color": "#333333",
        "fontSize": 14,
        "width": "100%",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "backgroundColor": "rgba(0, 66, 54, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(51, 51, 51, 0.04)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "icon": Object {
        "color": "#333333",
        "top": 4,
      },
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#bbbbbb",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiSvgIcon": Object {
      "root": Object {},
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "active": "rgba(0, 0, 0, 0.56)",
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#fafafa",
      "defaultContrastText": "#333333",
      "paper": "#ffffff",
      "paperContrastText": "#333333",
    },
    "complementary": Object {
      "highlight": "#000000",
      "link": "#227bbd",
      "linkContrastText": "#ffffff",
      "warning": "#fcc433",
      "warningContrastText": "#333333",
    },
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": Object {
      "contrastText": "#ffffff",
      "main": "#e74627",
    },
    "primary": Object {
      "contrastText": "#ffffff",
      "dark": "#001d10",
      "light": "#356d60",
      "main": "#004236",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#a29d12",
      "light": "#ffff7c",
      "main": "#d6ce4b",
    },
    "success": Object {
      "contrastText": "#ffffff",
      "main": "#569a32",
    },
    "text": Object {
      "disabled": "#bbbbbb",
      "hint": "#bbbbbb",
      "primary": "#333333",
      "secondary": "#777777",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "huge": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "hugeX": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "hugeXX": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "large": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeX": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeXX": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "medium": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "micro": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "none": "none",
    "small": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "tiny": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontSize": 16,
      "fontWeight": 400,
      "letterSpacing": 0.51,
    },
    "body2": Object {
      "fontSize": 14,
      "fontWeight": 400,
      "letterSpacing": 0.22,
    },
    "button": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 1.23,
      "lineHeight": 1.5,
    },
    "caption": Object {
      "fontSize": 12,
      "fontWeight": 400,
      "letterSpacing": 0.38,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": 96,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h2": Object {
      "fontSize": 60,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h3": Object {
      "fontSize": 48,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h4": Object {
      "fontSize": 34,
      "fontWeight": 400,
      "letterSpacing": 0.27,
    },
    "h5": Object {
      "fontSize": 24,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h6": Object {
      "fontSize": 20,
      "fontWeight": 500,
      "letterSpacing": 0.24,
    },
    "overline": Object {
      "fontSize": 12,
      "fontWeight": 500,
      "letterSpacing": 1.92,
    },
    "subtitle1": Object {
      "fontSize": 16,
      "fontWeight": 500,
      "letterSpacing": 0.13,
    },
    "subtitle2": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 0.11,
    },
  },
}
`;
